# VegaOptimizer

./: .gitignore  README.md  index.html  launch.bat  package-lock.json  package.json  vegamcp_desktop_test.js  vegamcp_full_audit.js  vite.config.ts
.github/workflows/: ci.yml
UsefulCode/DesignKnowledge/: palettes.json  trends.json  typographies.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: battery.rs  benchmark.rs  debloater.rs  disk_cleanup.rs  disk_health.rs  dns.rs  duplicates.rs  lib.rs  monitor.rs  network.rs  optimizer.rs  registry.rs  scanner.rs  services.rs  startup.rs  tweaks.rs
