[package]
name = "vega-optimizer"
version = "0.1.0"
description = "VegaOptimizer — System Process Cleaner & Optimizer"
authors = ["Vega"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.35"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "handleapi",
    "processthreadsapi",
    "psapi",
    "winuser",
    "minwindef",
    "errhandlingapi",
    "winbase",
    "securitybaseapi",
] }
